# pyVSNR_CUDA

./: README.md  requirements.txt  setup.cfg  setup.py
data/: camera_stripes_corr.tif
precompiled/: README.txt
pyVSNR/: README.txt  __init__.py  examples.py  tests.py  vsnr2d.cu
pyVSNR/data/: __init__.py  camera_curtains_corr.tif  camera_gaussian_noise.tif  camera_gaussian_noise_corr.tif  camera_stripes_corr.tif
