[metadata]
name = pyVSNR
version = 1.0.0
maintainer = Patrick QUEMERE
maintainer_email = patrick.quemere@cea.fr
description = VSNR algorithm for image destripping
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CEA-MetroCarac/pyVSNR
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Windows

[options]
zip_safe = False
package_dir =
    = pyVSNR
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    numpy
    ctypes
    matplotlib
    skimage


[options.packages.find]
where = pyVSNR

[options.data_files]
data = data/*.tif, data/*.png